# laba7

./: CMakeLists.txt  README.md  main.cpp
dir1/: file3
